# technical-llamaindex

./: .env.example  .gitignore  01_quickstart_rag.ipynb  02_advanced_retrieval.ipynb  03_colab_ollama_rag.ipynb  03_local_ollama_rag.ipynb  03_local_ways_of_working_rag.ipynb  04_colab_ollama_team_ops.ipynb  05_build_team_ops_index_colab.ipynb  06_demo_team_ops_from_saved_index_colab.ipynb  LICENSE  README.md  postBuild  pyproject.toml  requirements.txt  slides.md  technical_intro_to_rag.ipynb  technical_intro_to_rag_local.ipynb
outputs/: notes.md  slides.md
scripts/: scrape_nhm_new_species.py  ways_of_working_local_demo.py
